<resources>
    <string name="app_name">My ToDo App</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">User Name</string>
    <string name="login">Login</string>
    <string name="my_notes_app">My Notes App</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="add_notes">Add Notes</string>
    <string name="blogs">Blogs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment">First fragment</string>
    <string name="next">Next</string>
    <string name="second_fragment">Second fragment</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="your_own_todo_notes_app">Your own ToDo notes App</string>
    <string name="create_your_own_todo_for_the_day">Create your own ToDo for the day</string>
    <string name="chose_image_in_your_todos">Chose image in your todos</string>
    <string name="chose_image_from_your_camera_or_gallery">Chose Image from your camera or Gallery</string>
</resources>